samples/_failures_safe/1761640154_ca6062_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b3aecf29.c: In function ‘main’:
./samples/SAFE/__tmp_b3aecf29.c:168:21: error: expected ‘;’ at end of input
  168 |     print_buffer_hex
      |                     ^
      |                     ;
./samples/SAFE/__tmp_b3aecf29.c:168:5: error: expected declaration or statement at end of input
  168 |     print_buffer_hex
      |     ^~~~~~~~~~~~~~~~
